--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -240,21 +240,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "model_final_f10217.pkl: 178MB [00:04, 38.8MB/s]                              \n",
-      "/home/ubuntu/anaconda3/envs/pytorch_p38/lib/python3.8/site-packages/detectron2/structures/image_list.py:88: UserWarning: __floordiv__ is deprecated, and its behavior will change in a future version of pytorch. It currently rounds toward 0 (like the 'trunc' function NOT 'floor'). This results in incorrect rounding for negative values. To keep the current behavior, use torch.div(a, b, rounding_mode='trunc'), or for actual floor division, use torch.div(a, b, rounding_mode='floor').\n",
-      "  max_size = (max_size + (stride - 1)) // stride * stride\n",
-      "/home/ubuntu/anaconda3/envs/pytorch_p38/lib/python3.8/site-packages/torch/functional.py:445: UserWarning: torch.meshgrid: in an upcoming release, it will be required to pass the indexing argument. (Triggered internally at  /opt/conda/conda-bld/pytorch_1634272172048/work/aten/src/ATen/native/TensorShape.cpp:2157.)\n",
-      "  return _VF.meshgrid(tensors, **kwargs)  # type: ignore[attr-defined]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "cfg = get_cfg()\n",
     "cfg.MODEL.DEVICE='cpu'\n",
@@ -263,39 +251,66 @@
     "cfg.MODEL.ROI_HEADS.SCORE_THRESH_TEST = 0.5  # set threshold for this model\n",
     "# Find a model from detectron2's model zoo. You can use the https://dl.fbaipublicfiles... url as well\n",
     "cfg.MODEL.WEIGHTS = model_zoo.get_checkpoint_url(\"COCO-InstanceSegmentation/mask_rcnn_R_50_FPN_3x.yaml\")\n",
-    "predictor = DefaultPredictor(cfg)\n",
+    "predictor = DefaultPredictor(cfg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img_to_boxes = dict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ubuntu/anaconda3/envs/pytorch_p38/lib/python3.8/site-packages/detectron2/structures/image_list.py:88: UserWarning: __floordiv__ is deprecated, and its behavior will change in a future version of pytorch. It currently rounds toward 0 (like the 'trunc' function NOT 'floor'). This results in incorrect rounding for negative values. To keep the current behavior, use torch.div(a, b, rounding_mode='trunc'), or for actual floor division, use torch.div(a, b, rounding_mode='floor').\n",
+      "  max_size = (max_size + (stride - 1)) // stride * stride\n"
+     ]
+    }
+   ],
+   "source": [
     "outputs = predictor(im)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([17,  0,  0,  0,  0,  0,  0,  0, 25,  0, 25, 25,  0,  0, 24])"
+       "0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "outputs['instances'].pred_classes"
+    "ind = torch.nonzero(outputs['instances'].pred_classes)[0].item()\n",
+    "ind"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Boxes(tensor([[126.6035, 244.8977, 459.8291, 480.0000],\n",
+       "Instances(num_instances=15, image_height=480, image_width=640, fields=[pred_boxes: Boxes(tensor([[126.6035, 244.8977, 459.8291, 480.0000],\n",
        "        [251.1083, 157.8127, 338.9731, 413.6379],\n",
        "        [114.8496, 268.6864, 148.2352, 398.8111],\n",
        "        [  0.8217, 281.0327,  78.6072, 478.4210],\n",
@@ -309,25 +324,108 @@
        "        [510.7348, 263.2656, 570.9865, 295.9194],\n",
        "        [409.0841, 271.8646, 460.5582, 356.8722],\n",
        "        [506.8767, 283.3257, 529.9403, 324.0391],\n",
-       "        [594.5663, 283.4820, 609.0577, 311.4124]]))"
+       "        [594.5663, 283.4820, 609.0577, 311.4124]])), scores: tensor([0.9997, 0.9957, 0.9915, 0.9882, 0.9861, 0.9840, 0.9769, 0.9716, 0.9062,\n",
+       "        0.9037, 0.8870, 0.8575, 0.6592, 0.5899, 0.5767]), pred_classes: tensor([17,  0,  0,  0,  0,  0,  0,  0, 25,  0, 25, 25,  0,  0, 24]), pred_masks: tensor([[[False, False, False,  ..., False, False, False],\n",
+       "         [False, False, False,  ..., False, False, False],\n",
+       "         [False, False, False,  ..., False, False, False],\n",
+       "         ...,\n",
+       "         [False, False, False,  ..., False, False, False],\n",
+       "         [False, False, False,  ..., False, False, False],\n",
+       "         [False, False, False,  ..., False, False, False]],\n",
+       "\n",
+       "        [[False, False, False,  ..., False, False, False],\n",
+       "         [False, False, False,  ..., False, False, False],\n",
+       "         [False, False, False,  ..., False, False, False],\n",
+       "         ...,\n",
+       "         [False, False, False,  ..., False, False, False],\n",
+       "         [False, False, False,  ..., False, False, False],\n",
+       "         [False, False, False,  ..., False, False, False]],\n",
+       "\n",
+       "        [[False, False, False,  ..., False, False, False],\n",
+       "         [False, False, False,  ..., False, False, False],\n",
+       "         [False, False, False,  ..., False, False, False],\n",
+       "         ...,\n",
+       "         [False, False, False,  ..., False, False, False],\n",
+       "         [False, False, False,  ..., False, False, False],\n",
+       "         [False, False, False,  ..., False, False, False]],\n",
+       "\n",
+       "        ...,\n",
+       "\n",
+       "        [[False, False, False,  ..., False, False, False],\n",
+       "         [False, False, False,  ..., False, False, False],\n",
+       "         [False, False, False,  ..., False, False, False],\n",
+       "         ...,\n",
+       "         [False, False, False,  ..., False, False, False],\n",
+       "         [False, False, False,  ..., False, False, False],\n",
+       "         [False, False, False,  ..., False, False, False]],\n",
+       "\n",
+       "        [[False, False, False,  ..., False, False, False],\n",
+       "         [False, False, False,  ..., False, False, False],\n",
+       "         [False, False, False,  ..., False, False, False],\n",
+       "         ...,\n",
+       "         [False, False, False,  ..., False, False, False],\n",
+       "         [False, False, False,  ..., False, False, False],\n",
+       "         [False, False, False,  ..., False, False, False]],\n",
+       "\n",
+       "        [[False, False, False,  ..., False, False, False],\n",
+       "         [False, False, False,  ..., False, False, False],\n",
+       "         [False, False, False,  ..., False, False, False],\n",
+       "         ...,\n",
+       "         [False, False, False,  ..., False, False, False],\n",
+       "         [False, False, False,  ..., False, False, False],\n",
+       "         [False, False, False,  ..., False, False, False]]])])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "outputs['instances'].pred_boxes"
+    "outputs['instances']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'horse'"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import torch"
+    "coco_labels[outputs['instances'].pred_classes[ind].item()+1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "a = os.listdir('data/coco/train2017')\n",
+    "type(a)"
    ]
   },
   {
@@ -396,7 +494,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.15"
+   "version": "3.8.12"
   },
   "orig_nbformat": 4
  },
