--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -1095,6 +1095,148 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-9-1a1a69ec6f06>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-9-1a1a69ec6f06>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    b = [num for num in a if num % 2 == 0 else num + 1 if num < 4 else 0]\u001b[0m\n\u001b[0m                                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1,2,3,4,5]\n",
+    "b = [num for num in a if num % 2 == 0 else num + 1 if num < 4 else 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = '''-rw-------  1 ubuntu ubuntu 315415 Apr 28 06:57 tmp0dp63sju.json\n",
+    "-rw-------  1 ubuntu ubuntu 317622 Apr 28 07:44 tmp10ozi7kz.json\n",
+    "-rw-------  1 ubuntu ubuntu 310501 Apr 28 07:59 tmp1_av6ept.json\n",
+    "-rw-------  1 ubuntu ubuntu 322400 Apr 28 13:08 tmp1_wz3lp8.json\n",
+    "-rw-------  1 ubuntu ubuntu 313937 Apr 28 09:01 tmp1wv2m4pu.json\n",
+    "-rw-------  1 ubuntu ubuntu 313683 Apr 28 08:30 tmp36w9akc3.json\n",
+    "-rw-------  1 ubuntu ubuntu 314380 Apr 28 08:15 tmp4otcevej.json\n",
+    "-rw-------  1 ubuntu ubuntu 310028 Apr 28 06:26 tmp5m60ko1i.json\n",
+    "-rw-------  1 ubuntu ubuntu 321400 Apr 28 12:53 tmp69n6s4rd.json\n",
+    "-rw-------  1 ubuntu ubuntu 321959 Apr 28 13:52 tmp8853nt94.json\n",
+    "-rw-------  1 ubuntu ubuntu 320946 Apr 28 13:38 tmp9c2dj18l.json\n",
+    "-rw-------  1 ubuntu ubuntu 312435 Apr 28 09:48 tmp_ffpj_ko.json\n",
+    "-rw-------  1 ubuntu ubuntu 315792 Apr 28 10:51 tmp_r155ms3.json\n",
+    "-rw-------  1 ubuntu ubuntu 320914 Apr 28 13:23 tmp_x6lpc4v.json\n",
+    "-rw-------  1 ubuntu ubuntu 317099 Apr 28 07:28 tmpa7j6j2z5.json\n",
+    "-rw-------  1 ubuntu ubuntu 318083 Apr 28 10:35 tmpbednftfb.json\n",
+    "-rw-------  1 ubuntu ubuntu 316549 Apr 28 12:08 tmpbm9o1rt1.json\n",
+    "-rw-------  1 ubuntu ubuntu 320667 Apr 28 11:37 tmpd7tsj0x0.json\n",
+    "-rw-------  1 ubuntu ubuntu 315329 Apr 28 10:04 tmpdczcvlox.json\n",
+    "-rw-------  1 ubuntu ubuntu 301878 Apr 28 05:40 tmpe_xgabwh.json\n",
+    "-rw-------  1 ubuntu ubuntu 316646 Apr 28 08:46 tmpee8zwkaw.json\n",
+    "-rw-------  1 ubuntu ubuntu 314378 Apr 28 06:41 tmpeq_ak4u3.json\n",
+    "-rw-------  1 ubuntu ubuntu 311431 Apr 28 06:10 tmpfq8gxzyr.json\n",
+    "-rw-------  1 ubuntu ubuntu 322101 Apr 28 11:53 tmpiqp7c229.json\n",
+    "-rw-------  1 ubuntu ubuntu 319619 Apr 28 09:18 tmpmp2ux075.json\n",
+    "-rw-------  1 ubuntu ubuntu 322361 Apr 28 14:22 tmpo2s7x3dp.json\n",
+    "-rw-------  1 ubuntu ubuntu 319876 Apr 28 11:22 tmpqhmp9eis.json\n",
+    "-rw-------  1 ubuntu ubuntu 310059 Apr 28 05:55 tmpskjxptin.json\n",
+    "-rw-------  1 ubuntu ubuntu 321334 Apr 28 12:23 tmptaek5vxw.json\n",
+    "-rw-------  1 ubuntu ubuntu 322873 Apr 28 14:07 tmptkf1bgtn.json\n",
+    "-rw-------  1 ubuntu ubuntu 314755 Apr 28 07:12 tmpu70kkv1w.json\n",
+    "-rw-------  1 ubuntu ubuntu 319973 Apr 28 12:39 tmpuzmhyba9.json\n",
+    "-rw-------  1 ubuntu ubuntu 316197 Apr 28 10:19 tmpvbkbl3b7.json\n",
+    "-rw-------  1 ubuntu ubuntu 313683 Apr 28 09:33 tmpycwb5pj0.json\n",
+    "-rw-------  1 ubuntu ubuntu 322639 Apr 28 11:06 tmpzfo388p6.json'''.split('\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "b = [st.split()[7:9] for st in a]\n",
+    "b.sort()\n",
+    "\n",
+    "for i, (_, filename) in enumerate(b):\n",
+    "    os.system(f'cp /tmp/{filename} outputs/iter_{(i + 1) * 1000}.json')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/home/ubuntu/updown-baseline'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "      <iframe id=\"tensorboard-frame-2ba0c6a2ddef9c68\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      </iframe>\n",
+       "      <script>\n",
+       "        (function() {\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-2ba0c6a2ddef9c68\");\n",
+       "          const url = new URL(\"/\", window.location);\n",
+       "          const port = 6006;\n",
+       "          if (port) {\n",
+       "            url.port = port;\n",
+       "          }\n",
+       "          frame.src = url;\n",
+       "        })();\n",
+       "      </script>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%tensorboard --logdir checkpoints/updown"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext tensorboard"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
