--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -1192,15 +1192,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "UsageError: Line magic function `%tensorboard` not found.\n"
-     ]
+     "data": {
+      "text/html": [
+       "\n",
+       "      <iframe id=\"tensorboard-frame-8e3f3404e2b9e4d\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      </iframe>\n",
+       "      <script>\n",
+       "        (function() {\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-8e3f3404e2b9e4d\");\n",
+       "          const url = new URL(\"/\", window.location);\n",
+       "          const port = 6006;\n",
+       "          if (port) {\n",
+       "            url.port = port;\n",
+       "          }\n",
+       "          frame.src = url;\n",
+       "        })();\n",
+       "      </script>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -1209,7 +1228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1303,22 +1322,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "117432"
+       "118287"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(d1)"
+    "import json\n",
+    "\n",
+    "with open('data/coco/captions_train2017_mod.json') as f:\n",
+    "    dic = json.loads(f.read())\n",
+    "\n",
+    "len(dic['images'])"
    ]
   },
   {
@@ -1416,37 +1440,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average captions per image: 5.00\n",
-      "Average captions modified per image: 2.00\n",
+      "Average captions per image: 5.0027\n",
+      "Average captions modified per image: 1.9987\n",
       "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  2%|▏         | 1904/118287 [00:51<52:51, 36.70it/s]  \n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-9-13f1d638c7db>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     90\u001b[0m     \u001b[0mkeep_inds\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     91\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 92\u001b[0;31m     \u001b[0mnum_boxes\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mhf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'num_boxes'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     93\u001b[0m     \u001b[0;31m# easier to create a larger thing then trim down, compared to append (not in-place for numpy)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     94\u001b[0m     \u001b[0mnew_boxes\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnew_features\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnum_boxes\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;36m4\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnum_boxes\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;36m2048\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32mh5py/_objects.pyx\u001b[0m in \u001b[0;36mh5py._objects.with_phil.wrapper\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32mh5py/_objects.pyx\u001b[0m in \u001b[0;36mh5py._objects.with_phil.wrapper\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32m/home/ubuntu/anaconda3/envs/updown/lib/python3.6/site-packages/h5py/_hl/dataset.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, args)\u001b[0m\n\u001b[1;32m    474\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    475\u001b[0m         \u001b[0;31m# Perform the dataspace selection.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 476\u001b[0;31m         \u001b[0mselection\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mselect\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdsid\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mid\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    477\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    478\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mselection\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnselect\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
    "source": [
-    "# average: 5 captions per image\n",
-    "# 2 captions per image contains detected object name (and was replaced by zzzzzzzz)\n",
-    "\n",
     "import json\n",
     "import numpy as np\n",
     "from tqdm import tqdm\n",
@@ -1466,92 +1466,25 @@
     "    if image['file_name'] in detect:\n",
     "        img_id_to_name[image['id']] = detect[image['file_name']]['name']\n",
     "        img_id_to_box[image['id']] = detect[image['file_name']]['box']\n",
-    "        out['images'].append(image)\n",
+    "    out['images'].append(image)\n",
     "\n",
     "count = 0\n",
     "for annotation in b['annotations']:\n",
     "    if annotation['image_id'] in img_id_to_name:\n",
     "        annotation['caption'] = annotation['caption'].replace(img_id_to_name[annotation['image_id']], 'zzzzzzzz')\n",
-    "        out['annotations'].append(annotation)\n",
-    "        if 'zzzzzzzz' in annotation['caption']:\n",
-    "            count += 1\n",
+    "    out['annotations'].append(annotation)\n",
+    "    if 'zzzzzzzz' in annotation['caption']:\n",
+    "        count += 1\n",
     "\n",
     "with open('data/coco/captions_train2017_mod.json', 'w') as f:\n",
     "    f.write(json.dumps(out))\n",
     "\n",
     "# Average captions per image: 5.00\n",
-    "# Average captions modified per image: 2.00\n",
-    "print(f'Average captions per image: {len(out[\"annotations\"]) / len(out[\"images\"]):.2f}')\n",
-    "print(f'Average captions modified per image: {count / len(out[\"images\"]):.2f}')\n",
-    "print()\n",
-    "\n",
-    "# features are 2048d\n",
-    "# bounding boxes are (x1, y1, x2, y2) for both h5 and Detectron outputs\n",
-    "\n",
-    "hf = h5py.File('data/coco_train2017_vg_detector_features_adaptive.h5', 'r+')\n",
-    "\n",
-    "# method adapted from https://stackoverflow.com/questions/25349178/calculating-percentage-of-bounding-box-overlap-for-image-detector-evaluation\n",
-    "def iou(bb1, bb2):\n",
-    "    \"\"\"\n",
-    "    Calculate the Intersection over Union (IoU) of two bounding boxes.\n",
-    "\n",
-    "    bounding box format (x1, y1, x2, y2), x1 < x2, y1 < y2\n",
-    "\n",
-    "    Returns\n",
-    "    -------\n",
-    "    float\n",
-    "        in [0, 1]\n",
-    "    \"\"\"\n",
-    "    # determine the coordinates of the intersection rectangle\n",
-    "    x_left = max(bb1[0], bb2[0])\n",
-    "    x_right = min(bb1[2], bb2[2])\n",
-    "    y_top = max(bb1[1], bb2[1])\n",
-    "    y_bottom = min(bb1[3], bb2[3])\n",
-    "\n",
-    "    if x_right < x_left or y_bottom < y_top:\n",
-    "        return 0.0\n",
-    "\n",
-    "    # The intersection of two axis-aligned bounding boxes is always an\n",
-    "    # axis-aligned bounding box\n",
-    "    intersection_area = (x_right - x_left) * (y_bottom - y_top)\n",
-    "\n",
-    "    # compute the area of both AABBs\n",
-    "    bb1_area = (bb1[2] - bb1[0]) * (bb1[3] - bb1[1])\n",
-    "    bb2_area = (bb2[2] - bb2[0]) * (bb2[3] - bb2[1])\n",
-    "\n",
-    "    # compute the intersection over union by taking the intersection\n",
-    "    # area and dividing it by the sum of prediction + ground-truth\n",
-    "    # areas - the interesection area\n",
-    "    iou = intersection_area / float(bb1_area + bb2_area - intersection_area)\n",
-    "\n",
-    "    return iou\n",
-    "\n",
-    "avg_boxes_before, avg_boxes_after = 0, 0\n",
-    "keep_inds = []\n",
-    "\n",
-    "for i, image_id in enumerate(tqdm(hf['image_id'])):\n",
-    "    if image_id not in img_id_to_box:\n",
-    "        continue\n",
-    "\n",
-    "    keep_inds.append(i)\n",
-    "\n",
-    "    num_boxes = hf['num_boxes'][i]\n",
-    "    # easier to create a larger thing then trim down, compared to append (not in-place for numpy)\n",
-    "    new_boxes, new_features = np.zeros(num_boxes * 4), np.zeros(num_boxes * 2048)\n",
-    "    new_count = 0\n",
-    "\n",
-    "    for j in range(num_boxes):\n",
-    "        if iou(hf['boxes'][i][j*4:j*4+4], img_id_to_box[image_id]) < 1/3:\n",
-    "            new_boxes[new_count*4:new_count*4+4] = hf['boxes'][i][j*4:j*4+4]\n",
-    "            new_features[new_count*2048:new_count*2048+2048] = hf['features'][i][j*2048:j*2048+2048]\n",
-    "            new_count += 1\n",
-    "\n",
-    "    hf['boxes'][i] = new_boxes[:4*new_count]\n",
-    "    hf['features'][i] = new_features[:2048*new_count]\n",
-    "    hf['num_boxes'][i] = new_count\n",
-    "\n",
-    "    avg_boxes_before += num_boxes\n",
-    "    avg_boxes_after += new_count\n"
+    "# Average captions modified per image: 1.98\n",
+    "# 117432\n",
+    "print(f'Average captions per image: {len(out[\"annotations\"]) / len(out[\"images\"]):.4f}')\n",
+    "print(f'Average captions modified per image: {count / len(img_id_to_name):.4f}')\n",
+    "print()"
    ]
   },
   {
